<resources>
    <string name="app_name">Aurora</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome">Ale działa aplikacja kosmiczna, zorzę zwiastująca!</string>
    <string name="preference_file_key">eu.dziadosz.aurora.PREFERENCE_FILE_KEY</string>

    <string-array name="error_type_array">
        <item>No internet connection. Please check your internet connection and try \"Check now\" again.</item>
        <item>Unable to download file, maybe auroa web page is temporary down. Please try \"Check now\" again later.</item>
        <item>Unable to parse downloaded file. Please contact with author and wait for upgrade of this app.</item>
    </string-array>

    <string name="notify_title_error">Unable to fetch data!</string>
    <string name="notify_title_aurora">Aurora is visible!</string>
    <string name="notify_content_both">Aurora should be visible in your location! Go out!</string>
    <string name="notify_content_probability">Probability is high!</string>
    <string name="notify_content_kp">KP Index is high!</string>
    <string name="notify_title_checking">Checking if auoroa is visible&#8230;</string>
    <string name="notify_content_checking">Please wait… if aurora will be visible I notify you.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Location settings -->
    <string name="pref_header_location">Location</string>
    <string name="pref_location_lon">Longitude</string>
    <string name="pref_location_lat">Latitude</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Show notifications</string>

    <string name="pref_title_min_probability">Minimum probability to notify</string>
    <string-array name="pref_min_probability_titles">
        <item>10&#65285;</item>
        <item>20&#65285;</item>
        <item>30&#65285;</item>
        <item>40&#65285;</item>
        <item>50&#65285;</item>
        <item>60&#65285;</item>
        <item>70&#65285;</item>
        <item>80&#65285;</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_min_probability_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>100</item>
    </string-array>

    <string name="pref_title_min_kp">Minimum KP Index to notify</string>
    <string-array name="pref_min_kp_titles">
        <item>KP Index > 3</item>
        <item>KP Index > 4</item>
        <item>KP Index > 5</item>
        <item>KP Index > 6</item>
        <item>KP Index > 7</item>
        <item>KP Index > 8</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_min_kp_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>100</item>
    </string-array>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
